completed main functionality

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Application configuration
 PORT=8080
+SECRET_KEY="secret key"
 
 # Database credentials, creating DB in PostgreSQL
 POSTGRES_DB=db_name
@@ -7,4 +8,4 @@ POSTGRES_USER=db_user
 POSTGRES_PASSWORD=db_pass
 
 # Database connection url in format: postgres://user:pass@host:port/db_name
-PG_URL="postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB"
+PG_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}"
