--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: '3.7'
 services:
   app:
     build:
-      dockerfile: Dockerfile
+      context: .
     ports:
-      - 3000:3000
+      - 8080:8080
     env_file:
       - .env
     links:
